Added small random interval for calculating BFS path to avoid lags, pathing fully works (BFS)